--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.23.3"
+    "helmet": "^3.23.3",
+    "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/helmet": "^0.0.47",
+    "@types/mongoose": "^5.7.34",
     "@types/node": "^14.0.26",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
