--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "npx ts-node-dev src/index.ts"
+    "dev": "yarn run clean && npx ts-node-dev src/index.ts",
+    "clean": "npx rimraf dist/*"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
-    "mongoose": "^5.9.27"
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/helmet": "^0.0.47",
-    "@types/mongoose": "^5.7.34",
     "@types/node": "^14.0.26",
+    "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.5.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
