--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,12 @@
   "plugins": ["@typescript-eslint", "json", "prettier"],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
     "plugin:json/recommended",
+    "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
     "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
   ],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
