--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Ben B. <boucher.bn@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "yarn run ts-node-dev src/index.ts"
+    "dev": "yarn run ts-node-dev src/index.ts",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
