--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
   "name": "peekr-serv",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "repository": "https://github.com/ooneb/peekr-serv.git",
   "author": "Ben B. <boucher.bn@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "yarn run ts-node-dev src/index.ts",
+    "start": "node dist/app.js",
+    "dev": "yarn run ts-node-dev src/app.ts --files",
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.17",
+    "passport": "^0.4.1",
+    "passport-oauth": "^1.0.0",
+    "passport-oauth1": "^1.1.0",
     "tumblr.js": "^3.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.3",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.20",
     "@types/mongoose": "^5.7.34",
     "@types/node": "^14.0.26",
+    "@types/passport": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.20.0",
