TS/JS MIIIIXXXX

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,40 @@
 {
-  "env": {
-    "node": true
-  },
+  "root": true,
+
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "json", "prettier"],
+
+  "env": {
+    "node": true,
+    "es2021": true,
+    "jest/globals": true
+  },
+
+  "plugins": ["json", "jest", "prettier"],
   "extends": [
     "eslint:recommended",
+    "plugin:jest/recommended",
     "plugin:json/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
     "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
   ],
-  "rules": {
-    "@typescript-eslint/ban-ts-comment": "off"
-  }
+
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+
+      "plugins": ["@typescript-eslint", "jest", "prettier"],
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
+        "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
+      ],
+      "rules": {
+        "@typescript-eslint/ban-ts-comment": "off"
+      }
+    }
+  ]
 }
