--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@types/express-session": "^1.17.3",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.7.34",
     "@types/node": "^14.0.26",
     "@types/passport": "^1.0.6",
+    "@types/request": "^2.48.5",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
